--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,7 +1,12 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body {
     font-family: sans-serif;
 }
+
+$blue : #0D6EFD;
+$gray : #D9D9D9;
+$lightgray : #F8F9FA;
