--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,6 +1,7 @@
-.btn {
+.form__btn {
     background-color: blue;
     color: white;
     padding: 10px;
     border-radius: 10px;
+    border: none;
 }
