--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,19 +1,20 @@
 .nav {
-    padding: 20px 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 0 10px;
     align-items: center;
-    gap: 30%;
-
-    &__logo {
+    padding: 10px 0;
+    & a {
         text-decoration: none;
-        color: black;
-        font-size: 1.2em;
     }
-
-    // style in buttons.scss
-    
+    &__logo {
+        color: black;
+    }
     &__link {
-        text-decoration: none;
+        background-color: blue;
+        color: white;
+        padding: 10px;
+        border-radius: 10px;
+        border: none;
     }
 }
