--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -1,13 +1,15 @@
 .footer {
-    background-color: #d9d9d9;
-    padding: 50px 30px;
+    background-color: lightgray;
+    padding: 50px 0;
+    padding-left: 40px;
     &__list {
-        display: flex; 
+        display: flex;
         gap: 5px;
         list-style: none;
     }
     &__list a {
         text-decoration: none;
+        color: blue;
         font-size: 0.8em;
     }
     &__text {
