--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,23 @@ body {
     font-size: 1em;
   }
 }
+@media screen and (min-width: 769px) {
+  .section__article {
+    flex-wrap: nowrap;
+  }
+  .section__article .article {
+    width: 25%;
+  }
+  .section__article .article__img {
+    width: 90px;
+  }
+  .section__article .article__title {
+    font-size: 1.2em;
+  }
+  .section__article .article__text {
+    font-size: 1.1em;
+  }
+}
 .footer {
   background-color: lightgray;
   padding: 50px 0;
