--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -30,6 +30,7 @@
 
 .section__contact {
     text-align: center;
+
     .contact__title {
         font-size: 1.5em;
     }
@@ -39,17 +40,43 @@
     .section__article {
         flex-direction: row;
         flex-wrap: wrap;
-    .article {
-        width: 40%;
-        &__img {
-            width: 80px;
-        }
-        &__title {
-            font-size: 1.1em;
-        }
-        &__text{
-            font-size: 1em;
+
+        .article {
+            width: 40%;
+
+            &__img {
+                width: 80px;
+            }
+
+            &__title {
+                font-size: 1.1em;
+            }
+
+            &__text {
+                font-size: 1em;
+            }
         }
     }
+}
+
+@media screen and (min-width: 769px) {
+    .section__article {
+        flex-wrap: nowrap;
+
+        .article {
+            width: 25%;
+
+            &__img {
+                width: 90px;
+            }
+
+            &__title {
+                font-size: 1.2em;
+            }
+
+            &__text {
+                font-size: 1.1em;
+            }
+        }
     }
 }
