--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,6 @@
 @import 'layout/nav';
 @import 'layout/header';
 @import 'layout/main';
-@import 'layout/footer.scss';
+@import 'layout/footer';
 @import 'components/buttons';
-@import 'components/forms.scss'
+@import 'components/forms'
