--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -44,6 +44,32 @@ input {
     font-size: 0.8em;
     opacity: 0;
 }
+
+.modal__container {
+    display: none;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.349);
+    height: 100vh;
+    width: 100%;  
+    justify-content: center;
+    align-items: center;
+}
+.modal {
+    padding: 20px 20px;
+    background-color: rgb(65, 59, 59);
+    color: white;
+    border-radius: 20px;
+    &__btn {
+        margin-top: 20px;
+        border: none;
+        background-color: $blue;
+        height: 30px;
+        width: 60px;
+        cursor: pointer;
+        border-radius: 10px;
+    }
+}
+
 @include breakpoint(tablet) {
 
     .contact__form {
